--- a/ansible/roles/web/templates/nginx-https.conf.j2
+++ b/ansible/roles/web/templates/nginx-https.conf.j2
@@ -1,16 +1,16 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name {{ nginx_server_name | default('localhost') }};
+    server_name {{ nginx_server_name | default('localhost') }} {{ ansible_host }};
     
-    # Redirection HTTP vers HTTPS
-    return 301 https://$server_name$request_uri;
+    # Redirection HTTP vers HTTPS (conserve l'hôte demandé)
+    return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name {{ nginx_server_name | default('localhost') }};
+    server_name {{ nginx_server_name | default('localhost') }} {{ ansible_host }};
 
     # Certificats SSL
     ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
